ansible/kubernetes/traefik/dashboard-auth.yaml
# NOT APPLIED

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: traefik

spec:
  basicAuth:
    secret: traefik-dashboard-basicauth-creds
