ansible/kubernetes/traefik/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: infrastructure
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: infrastructure
    sectionName: dashboard
  hostnames:
  - traefik.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: traefik
      namespace: infrastructure
      port: 8080
